--- a/new.html
+++ b/new.html
@@ -61,6 +61,48 @@
             <td>32000</td>
         </tr>
     </table>
+<br/>
+
+
+<form >
+  <fieldset >
+    <legend>CaNDIDATE INFO</legend>
+    <label for="name">Name:</label>
+    <input type="text" placeholder="hello" id="name" name="name"><br><br>
+
+    <label for="middleName">Middle Name:</label>
+    <input type="text" id="name" name="name"><br><br>
+    
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email"><br><br>
+
+    <label for="password">Password:</label><br>
+  <input type="password" id="password" name="password"><br><br>
+
+  <label for="name"><address></address>:</label>
+    <textarea cols="10"></textarea><br><br>
+
+  <label for="gender">Gender:</label><br>
+  <input type="radio"  value="male"> Male
+  <input type="radio" value="female"> Female<br><br>
+<label for="date">Date</label><br><br>
+<input type="date"  ><br><br>
+  <label for="hobbies">Hobbies:</label><br><br>
+  <input type="checkbox" > Reading
+  <input type="checkbox"> Sports<br><br>
+
+  <label for="country">Country:</label><br>
+  <select id="country" name="country">
+    <option value="Shahabad">Shahabad</option>
+    <option value="mullana">mullana</option>
+    <option value="ambala">ambala</option>
+  </select><br><br>
+  <input type ="tel" value="91" disabled >
+
+  <input type="submit" value="Submit">
+    
+  </fieldset>
+</form>
 
 
 </body>
