--- a/new.html
+++ b/new.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <table border="1">
+    <!-- <table border="1">
         <tr>
             <th>EMPLOYEE NAME</th>
             <th>SALARY</th>
@@ -103,7 +103,27 @@
     
   </fieldset>
 </form>
-
+<br/>
+<h1>a<sup>2</sup>+ b<sup>2</sup> = c<sup>2</sup> </h1>
+<h1>a² + b²</h1>
+<h1><math xmlns="http://www.w3.org/1998/Math/MathML">
+  <msup><mi>a</mi><mn>2</mn></msup>
+  <mo>+</mo>
+  <msup><mi>b</mi><mn>2</mn></msup>
+  <mo>=</mo>
+  <msup><mi>c</mi><mn>2</mn></msup>
+</math></h1>
+ -->
+<marquee behavior="scoll" direction ="left" >hello</marquee>
+<form>
+    <input type="range">
+    <input type="color"> 
+    <input type="time">
+    <input type="month">
+    <input type="week">
+    <input type="time">
+    <audio controls></audio>
+</form>
 
 </body>
 
